kociemba: Use lazy_static in phase 0 tests
This enables generating the tables only once, to be used by multiple
tests.

--- a/kociemba/Cargo.toml
+++ b/kociemba/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Joey Gouly <joey.gouly@gmail.com>"]
 
 [dependencies]
 cube = { path = "../cube" }
+
+[dev-dependencies]
+lazy_static = "1.0"
