--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,23 @@
 language: rust
+cache: cargo
 
 sudo: false
 
 rust:
   - nightly
-cache: cargo
 
 script:
   - cargo test
+
+jobs:
+  include:
+    - rust: nightly-2018-05-30
+      env:
+        - CLIPPY_VERSION=0.0.206
+      before_script:
+        - cargo install clippy --version $CLIPPY_VERSION || echo "clippy already installed"
+      script:
+        - cargo clippy
+
+  allow_failures:
+  - rust: nightly-2018-05-30
